frontend: * fix subscribe button jumps

--- a/frontend/src/components/common/button/styles.module.scss
+++ b/frontend/src/components/common/button/styles.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100px;
   padding: 5px 10px;
   color: var(--always-white-color);
   font-size: 14px;
